--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@ set -g status-right ''
 set-window-option -g window-status-style fg='#888888',bg=default
 set-window-option -g window-status-current-style fg='#efefef',bg='#000000'
 #set-window-option -g window-status-style fg='#999999',bg=default
-#set-window-option -g window-status-current-style fg='#222222',bg='#eeeded'
+#set-window-option -g window-status-current-style fg='#000000',bg='#eeeded'
 
 set -g status-justify centre
 
@@ -24,7 +24,7 @@ set -g status-justify centre
 set -g prefix C-b
 
 set -g base-index 1
-set-option -g mouse on
+# set-option -g mouse on
 # set -g set-clipboard on
 set -g history-limit 10000
 
