--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,22 +2,23 @@
 set-option -g default-shell "/bin/zsh"
 
 # Status
-set -g message-style bg='#000000',fg='#888888'
-set -g status-style bg='#000000',fg='#888888'
+#set -g message-style bg='#000000',fg='#888888'
+#set -g status-style bg='#000000',fg='#888888'
 #set -g message-style bg='#eeeded',fg='#333333'
 #set -g status-style bg='#eeeded',fg='#333333'
 set -g status-interval 1
 
 set -g status-left ''
 set -g status-right ''
+set-option -g status-style bg=default
+
 
 set-window-option -g window-status-style fg='#888888',bg=default
-set-window-option -g window-status-current-style fg='#efefef',bg='#000000'
+set-window-option -g window-status-current-style fg='#efefef',bg=default
 #set-window-option -g window-status-style fg='#999999',bg=default
 #set-window-option -g window-status-current-style fg='#000000',bg='#eeeded'
 
 set -g status-justify centre
-
 
 # Status end
 
@@ -71,3 +72,5 @@ set -g @continuum-restore 'on'
 
 # Tmux package manager
 run '~/.tmux/plugins/tpm/tpm'
+
+
