--- a/.tmux.conf
+++ b/.tmux.conf
@@ -12,9 +12,8 @@ set -g status-left ''
 set -g status-right ''
 set-option -g status-style bg=default
 
-
-set-window-option -g window-status-style fg='#888888',bg=default
-set-window-option -g window-status-current-style fg='#efefef',bg=default
+set-window-option -g window-status-style fg='#333333',bg=default
+set-window-option -g window-status-current-style fg='#eeeeee',bg=default
 #set-window-option -g window-status-style fg='#999999',bg=default
 #set-window-option -g window-status-current-style fg='#000000',bg='#eeeded'
 
@@ -32,7 +31,6 @@ set -g history-limit 10000
 set -g default-terminal "xterm-256color"
 set -g terminal-overrides "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
-
 
 # Keybinds
 
@@ -72,5 +70,4 @@ set -g @continuum-restore 'on'
 
 # Tmux package manager
 run '~/.tmux/plugins/tpm/tpm'
-
 
