--- a/i3/config
+++ b/i3/config
@@ -1,4 +1,5 @@
 # pip install --user bumblebee-status
+# sudo pacman -S arc-gtk-theme
 
 # i3 config file (v4)
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
@@ -157,9 +158,7 @@ mode "resize" {
 
         # Pressing left will shrink the window’s width.
         # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
+        # Pressing up will shrink the window’s height. Pressing down will grow the window’s height. bindsym j resize shrink width 10 px or 10 ppt
         bindsym k resize grow height 10 px or 10 ppt
         bindsym l resize shrink height 10 px or 10 ppt
         bindsym semicolon resize grow width 10 px or 10 ppt
@@ -185,12 +184,21 @@ bar {
         -m sensors cpu memory battery disk bluetooth pasink pasource datetime \
         -p time.format="%d/%m/%Y %H:%M" \
         -t greyish-powerline
+    colors {
+        background #111111
+    }
 }
+
+bindsym F1 exec thunar
+bindsym F2 exec thunar /run/media/primaris/small_ssd
+bindsym Print exec flameshot gui
 
 exec mullvad-vpn
 exec --no-startup-id setxkbmap -layout 'us,th' -option 'grp:alt_shift_toggle'
 exec --no-startup-id xcompmgr
-exec xwallpaper --zoom ~/Pictures/anime-cloudy.jpeg
+exec xwallpaper --zoom ~/Pictures/anime-island.jpeg
+exec --no-startup-id gsettings set org.gnome.desktop.interface gtk-theme 'Arc-Dark'
+exec --no-startup-id gsettings set org.gnome.desktop.interface icon-theme 'Numix'
 
 gaps inner 15
 gaps outer 7
