--- a/i3/config
+++ b/i3/config
@@ -63,18 +63,24 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run -c -l 20
+# bindsym $mod+d exec --no-startup-id dmenu_run -c -l 20
+# bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
-# bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+# bindcode $mod+40 exec "rofi -modi drun,run -show drun -theme Arc-Dark"
+# bindsym $mod+space exec "rofi -modi drun,run -show drun -theme Arc-Dark"
+bindsym $mod+space exec "rofi -show combi -combi-modes 'drun,keys,filebrowser,window,run,ssh' -modes combi -theme Arc-Dark"
+bindsym $mod+m exec "rofi -show filebrowser -modes filebrowser -theme Arc-Dark"
+bindsym $mod+d exec "rofi -show calc -modi calc -no-show-match -no-sort -theme Arc-Dark"
+
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -83,10 +89,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -95,7 +101,7 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+# bindsym $mod+h split h
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -104,18 +110,18 @@ bindsym $mod+v split v
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+# bindsym $mod+s layout stacking
+# bindsym $mod+w layout tabbed
+# bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+# bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+# bindsym $mod+a focus parent
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -149,7 +155,7 @@ bindsym $mod+0 workspace number $ws10
 bindsym $mod+Shift+1 move container to workspace number $ws1
 bindsym $mod+Shift+2 move container to workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
+bindsym $mod+Shift+4 move cotainer to workspace number $ws4
 bindsym $mod+Shift+5 move container to workspace number $ws5
 bindsym $mod+Shift+6 move container to workspace number $ws6
 bindsym $mod+Shift+7 move container to workspace number $ws7
@@ -171,15 +177,16 @@ mode "resize" {
         # Pressing left will shrink the window’s width.
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height. Pressing down will grow the window’s height. bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+        # bindsym h resize shrink width 10 px or 10 ppt
+        # bindsym k resize grow height 10 px or 10 ppt
+        # bindsym j resize shrink height 10 px or 10 ppt
+        # bindsym l resize grow width 10 px or 10 ppt
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
@@ -191,9 +198,10 @@ bindsym $mod+r mode "resize"
 
 bar {
     position top
-    font pango:JetBrains Mono 14
+    font pango:JetBrains Mono 10
 	status_command bumblebee-status \
-        -m sensors cpu memory battery disk bluetooth pasink pasource datetime \
+        -m cpu memory battery disk pasink pasource datetime \
+        #-m sensors cpu memory battery disk bluetooth pasink pasource datetime \
         # -t greyish-powerline
     colors {
         background #0d0d0d
@@ -201,8 +209,8 @@ bar {
 }
 
 
-bindsym $mod+F1    exec --no-startup-id thunar /home/primaris
-bindsym $mod+F2    exec --no-startup-id thunar /media/primaris/big_ssd
+bindsym $mod+F1    exec --no-startup-id thunar /home/$(whoami)
+bindsym $mod+F2    exec --no-startup-id thunar /run/media/$(whoami)/e3b70229-2ffe-4eb7-824c-472c9465eb2b
 bindsym $mod+F3    exec --no-startup-id keepassxc
 bindsym $mod+F4    exec --no-startup-id signal-desktop
 bindsym $mod+F5    exec --no-startup-id telegram-desktop
@@ -216,8 +224,8 @@ exec --no-startup-id xcompmgr
 exec --no-startup-id gsettings set org.gnome.desktop.interface gtk-theme 'Arc-Dark'
 exec --no-startup-id gsettings set org.gnome.desktop.interface icon-theme 'Numix'
 
-gaps inner 15
+gaps inner 8
 gaps outer 0
 
-default_border pixel 5
-default_floating_border pixel 5
+default_border pixel 3
+default_floating_border pixel 3
