updated vim config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -60,5 +60,5 @@ bind-key r command-prompt -I "#W" "rename-window '%%'"
 # set -g @continuum-restore 'on'
 
 # Tmux package manager
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
 
