--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,9 +20,9 @@ set -g base-index 1
 # set -g set-clipboard on
 set -g history-limit 10000
 
-set -g default-terminal "xterm-256color"
-set -g terminal-overrides "xterm-256color"
-set -ga terminal-overrides ",xterm-256color:Tc"
+#  set -g default-terminal "xterm-256color"
+# set -g terminal-overrides "xterm-256color"
+# set -ga terminal-overrides "xterm-256color:Tc"
 
 # Keybinds
 
