--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,12 +5,13 @@ set-option -g default-shell "/bin/zsh"
 set -g status-interval 1
 set -g status-left ''
 set -g status-right ''
-set-option -g status-style bg=default
+# set-option -g status-style bg=default
 
-set-window-option -g window-status-style fg='#333333',bg=default
-set-window-option -g window-status-current-style fg='#eeeeee',bg=default
+# set-window-option -g window-status-style fg='#333333',bg=default
+# set-window-option -g window-status-current-style fg='#eeeeee',bg=default
 
-set -g status-justify centre
+# set -g status-justify centre
+set -g status-justify left
 
 # Status end
 set -g prefix C-b
@@ -18,7 +19,7 @@ set -g prefix C-b
 set -g base-index 1
 # set-option -g mouse on
 # set -g set-clipboard on
-set -g history-limit 10000
+set -g history-limit 100000
 
 #  set -g default-terminal "xterm-256color"
 # set -g terminal-overrides "xterm-256color"
@@ -55,10 +56,14 @@ unbind C-Right
 bind-key r command-prompt -I "#W" "rename-window '%%'"
 
 # Plugins
+#set -g @plugin 'catppuccin/tmux#v2.1.3' # See https://github.com/catppuccin/tmux/tags for additional tags
 # set -g @plugin 'tmux-plugins/tmux-resurrect'
 # set -g @plugin 'tmux-plugins/tmux-continuum'
 # set -g @continuum-restore 'on'
 
 # Tmux package manager
-# run '~/.tmux/plugins/tpm/tpm'
+#run '~/.tmux/plugins/tpm/tpm'
 
+#set -g @catppuccin_flavor 'mocha
+
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
